Fix progress leaves white gap at the bottom of the indicator bar

--- a/src/resources/theme/typer/_typer.scss
+++ b/src/resources/theme/typer/_typer.scss
@@ -61,6 +61,7 @@ $char-color-failure: $red-500;
       display: inline-block;
       position: relative;
       left: 0.5px;
+      top: 0.5px;
     }
 
     .success {
